# flap

./: .clang-format  .clang-tidy  Makefile  meson.build
consumer/: meson.build
consumer/debug/: consumer.cpp  meson.build
consumer/llvm/: consumer.cpp  meson.build
doc/: grammar.md  spec.md
include/flap/: consumer.hpp  doc.hpp  document.hpp  flap.hpp  lexeme.hpp  parse.hpp  token.hpp  type_traits.hpp  util.hpp
include/flap/ast/: access.hpp  ast.hpp  binary_operator.hpp  binop.hpp  chunk.hpp  doc.hpp  expr.hpp  func.hpp  func_param.hpp  function.hpp  function_call.hpp  function_param.hpp  iden_expr.hpp  identifier_expr.hpp  int_lit.hpp  int_literal.hpp  module.hpp  node.hpp  pattern.hpp  ret_stmt.hpp  stmt.hpp  type.hpp  unop.hpp  value_pattern.hpp  var_def.hpp  var_def_stmt.hpp
include/flap/debug/: consumer.hpp
include/flap/llvm/: consumer.hpp
include/flap/types/: scope.hpp  string_view.hpp
lib/: consumer.cpp  lex.cpp  lex.hpp  logs.cpp  logs.hpp  meson.build  parse.cpp
lib/ast/: ast_priv.hpp  binary_operator_impl.hpp  function.hpp  function_call_impl.hpp  function_impl.hpp  function_param_impl.hpp  identifier_expr_impl.hpp  int_literal.hpp  meson.build  module.hpp  module_impl.cpp  module_impl.hpp  ret_stmt_impl.hpp  scope.hpp  var_def_stmt_impl.hpp
lib/consumer/: debug.hpp  llvm.hpp  meson.build
lib/flap/: algo.hpp  exception.hpp  flap.cpp  lex.cpp  lex.hpp  logs.hpp  meson.build  parse.cpp  parser.cpp  parser.hpp  test_algo.cpp  test_ast.cpp  test_ast_access.cpp  test_ast_funcs.cpp  test_lex.cpp  test_parse.cpp  test_scope.cpp  test_util.cpp  util.hpp
lib/flap/ast/: binary_operator_impl.hpp  int_literal.cpp  meson.build  ret_stmt_impl.hpp  value_pattern_impl.hpp
lib/flap/dt/: scope.hpp
lib/flap/test/: lex.cpp  meson.build  scope.cpp
lib/flap/types/: scope.hpp  string_view.hpp
lib/flap/util/: meson.build  test.cpp  type_traits.hpp
lib/test/: lex.cpp
lib/util/: .session.vim  cast.hpp  enum_arr.hpp  test.cpp  type_traits.hpp
sample/01_trivial/: add.flap  add_multiple.flap  func.flap  func_args.flap  mainonly.flap  mainonly2.flap  mul.flap  mul_multiple.flap  pattern_match_value.flap  sub.flap  sub_multiple.flap  var_create.flap  var_use.flap
script/: run-clang-tidy.sh  run-samples.py
subprojects/: cli11.wrap  magic_enum.wrap
